Refactor PostServiceImpl and UserGrpcService for improved functionality and code clarity
- In PostServiceImpl, added logic to default likes and comments to model values if they are zero.
- In UserGrpcService, reorganized methods for better readability and maintainability.
- Enhanced user creation and email verification processes with improved logging and error handling.
- Added methods to retrieve user followees, followings, and mutual friends.
- Implemented checks for user blocking and mutual following status.
- Updated user data retrieval methods to handle null values gracefully.
- Improved response handling for user-related requests, ensuring consistent success and error messages.

--- a/services/messaging-service/src/main/resources/application.yml
+++ b/services/messaging-service/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+      password: Admin@123
       timeout: 2000ms
       connect-timeout: 2000ms
   security:
