--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,11 @@ services:
       GRPC_SERVER_PORT: 9092
       GRPC_CLIENT_UPLOAD-FILE-SERVICE_ADDRESS: static://upload-file-service:9093
       GRPC_CLIENT_AUTH-SERVICE_ADDRESS: static://auth-service:9099
+      GRPC_CLIENT_POST-SERVICE_ADDRESS: static://post-service:9094
+      GRPC_CLIENT_POST_NEGOTIATION_TYPE: plaintext
+      GRPC_CLIENT_MESSAGING-SERVICE_ADDRESS: static://messaging-service:9098
+      GRPC_CLIENT_INTERACTION-SERVICE_ADDRESS: static://interaction-service:9095
+      GRPC_CLIENT_INTERACTION_NEGOTIATION_TYPE: plaintext
       SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9097
       MEILISEARCH_HOST: http://meilisearch:7700
       MEILISEARCH_APIKEY: masterKey
@@ -498,8 +503,8 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9097,PLAINTEXT_HOST://localhost:9097
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:9097
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9097
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9097
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -518,7 +523,7 @@ services:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     ports:
-      - "8082:8082"
+      - "8090:8080"
     depends_on:
       - kafka
     environment:
