Add gRPC client address and update Redis password in configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -376,6 +376,8 @@ services:
       SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_VALUE_DEFAULT_TYPE: org.nexo.notificationservice.dto.MessageDTO
       SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_TRUSTED_PACKAGES: org.nexo
       SPRING_KAFKA_CONSUMER_AUTO-OFFSET-RESET: earliest
+      GRPC_CLIENT_USERS_ADDRESS: static://user-service:9092
+
     depends_on:
       - eureka-server
       - user-db
@@ -505,7 +507,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9097
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9097
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     deploy:
