Update Kafka consumer group ID to story-deleter-group for post-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,7 @@ services:
       SPRING_KAFKA_PRODUCER_PROPERTIES_SPRING_JSON_ADD_TYPE_HEADERS: false
       SPRING_KAFKA_CONSUMER_KEY-DESERIALIZER: org.apache.kafka.common.serialization.StringDeserializer
       SPRING_KAFKA_CONSUMER_VALUE-DESERIALIZER: org.springframework.kafka.support.serializer.JsonDeserializer
-      SPRING_KAFKA_CONSUMER_GROUP-ID: post-service-group
+      SPRING_KAFKA_CONSUMER_GROUP-ID: story-deleter-group
       SPRING_KAFKA_CONSUMER_AUTO-OFFSET-RESET: earliest
       SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_TRUSTED_PACKAGES: "*"
       SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_ADD_TYPE_HEADERS: false
