--- a/services/post-service/src/main/resources/application.yml
+++ b/services/post-service/src/main/resources/application.yml
@@ -49,7 +49,7 @@ spring:
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      group-id: post-service-group
+      group-id: story-deleter-group
       auto-offset-reset: earliest
       properties:
         spring.json.trusted.packages: "*"
